src/test/ui/issue-49277-print-dyn.stderr
error[E0308]: mismatched types
  --> $DIR/issue-49277-print-dyn.rs:17:29
   |
LL |             let _: $type2 = x;
   |                             ^ expected trait `std::fmt::Display`, found trait `std::fmt::Debug`
...
LL | demonstrate_trait_object_type_mismatches!(1, Debug, Display);
   | ------------------------------------------------------------- in this macro invocation
   |
   = note: expected type `std::boxed::Box<dyn std::fmt::Display>`
              found type `std::boxed::Box<dyn std::fmt::Debug>`

error[E0308]: mismatched types
  --> $DIR/issue-49277-print-dyn.rs:17:29
   |
LL |             let _: $type2 = x;
   |                             ^ expected trait `std::fmt::Display`, found trait `std::fmt::Debug`
...
LL | demonstrate_trait_object_type_mismatches!(1, Debug, Display);
   | ------------------------------------------------------------- in this macro invocation
   |
   = note: expected type `&dyn std::fmt::Display`
              found type `&dyn std::fmt::Debug`

error[E0308]: mismatched types
  --> $DIR/issue-49277-print-dyn.rs:17:29
   |
LL |             let _: $type2 = x;
   |                             ^ expected trait `std::fmt::Display`, found trait `std::fmt::Debug`
...
LL | demonstrate_trait_object_type_mismatches!(1, Debug, Display);
   | ------------------------------------------------------------- in this macro invocation
   |
   = note: expected type `&mut dyn std::fmt::Display`
              found type `&mut dyn std::fmt::Debug`

error[E0308]: mismatched types
  --> $DIR/issue-49277-print-dyn.rs:17:29
   |
LL |             let _: $type2 = x;
   |                             ^ expected trait `std::fmt::Display`, found trait `std::fmt::Debug`
...
LL | demonstrate_trait_object_type_mismatches!(1, Debug, Display);
   | ------------------------------------------------------------- in this macro invocation
   |
   = note: expected type `&[&dyn std::fmt::Display]`
              found type `&[&dyn std::fmt::Debug]`

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0308`.
